# web-rs

./: .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
migrations/: 20230531000432_add_users.up.sql
public/: index.html
src/: config.rs  env.rs  error.rs  main.rs  state.rs
src/routes/: health.rs  mod.rs  session.rs  user.rs
src/utils/: auth.rs  cors.rs  json.rs  mod.rs  token.rs
