[package]
name = "web-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-extra = { version = "0.4.2", features = ["cookie", "spa"] }
cookie = "0.17.0"
dotenvy = "0.15.6"
envy = "0.4.2"
jsonwebtoken = "8.2.0"
redis = { version = "0.22.3", features = ["tokio-comp"] }
rust-argon2 = "1.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
