[package]
name = "web-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-redis-session = "0.2.2"
axum = "0.6.18"
axum-sessions = "0.5.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
envy = "0.4.2"
log = "0.4.18"
redis = { version = "0.23.0", features = ["tokio-comp"] }
rust-argon2 = "1.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
validator = { version = "0.16.0", features = ["derive"] }
